<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EDI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EDI Escuela De Informática e Ingles</string>
    <string name="nav_header_subtitle">edi@ediformacion.es</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio_sesion">Inicio Sesión</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio_sesi_n">Inicio Sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="mapa">Mapa</string>
    <string name="contacto">Contacto</string>
    <string name="google_maps">Entrar a Google Maps</string>
    <string name="para_ir_a_google_maps">Entrar en Google Maps</string>
    <string name="centro">Centro:</string>
    <string name="edi_escuela_de_inform_tica_e_ingl_s">EDI - Escuela de Informática e Inglés</string>
    <string name="propietario">Gerente:</string>
    <string name="vicente_r_mon_pi_uel_cabedo">VICENTE RÁMON PIÑUEL CABEDO</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="_965916266">965916266</string>
    <string name="email">Email:</string>
    <string name="edi_ediformacion_es">edi@ediformacion.es</string>
    <string name="localidad">Localidad:</string>
    <string name="_03010_alicante">03010 Alicante</string>
    <string name="direcci_n">Dirección:</string>
    <string name="profesores">Profesores</string>
    <string name="alumnos">Alumnos</string>
    <string name="aulas">Aulas</string>
    <string name="geolocalizaci_n_de_edi">Geolocalización</string>
    <string name="este_aula_cuenta_con">Este aula cuenta con:</string>
    <string name="_16_ordenadores_funcionales">* 16 Ordenadores funcionales</string>
    <string name="_2_altavoces_de_100w_con_tapa_de_potencia">* 2 Altavoces 100W con tapa potencia</string>
    <string name="_1_proyector">* 1 Proyector, 1 pizarra, 1 telefono</string>
    <string name="_1_aire_acondicionado">* 1 Aire acondicionado</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="bt_insertar">Insertar</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="bt_consultar">Eliminar</string>
    <string name="bt_ver_listview">Ver listview</string>
    <string name="bt_ver_recyclerview">Ver recyclerview</string>
    <string name="aviso_identificador">aviso Identificador</string>
    <string name="hint_identificador">Introduce identificador</string>
    <string name="consultar">Consultar</string>
    <string name="cursos">Cursos</string>
    <string name="contrese_a">Introduce contraseña</string>
    <string name="usuario1">Introduce usuario</string>
    <string name="asignar_profesor">Asg. Prof.</string>
    <string name="asignar_curso">Asg. Curso</string>
    <string name="ver_listado">Ver Listado</string>
    <string name="asignar_alumno">Asignar Alumno</string>
    <string name="id_profesor">ID Profesor</string>
    <string name="id_alumno">ID Alumno</string>
    <string name="mensaje">¿Quieres eliminarlo de la Base de datos?</string>
    <string name="mensaje2">¿Quieres actualizarlo de la Base de datos?</string>
    <string name="negativo">No se ha eliminado de la Base de datos</string>
    <string name="titulo">Eliminar</string>
    <string name="titulo2">Actualizar</string>
    <string name="dialog_button_positivo">Si</string>
    <string name="dialog_button_negativo">No</string>
    <string name="dialog_button_neutral">neutral</string>
    <string name="aula">Aula</string>
    <string name="dise_o_aulas">Diseño Aulas</string>
    <string name="id_curso">ID Curso</string>
    <string name="asignar_aula">ASIGNAR AULA</string>
    <string name="c_digo">Código</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>